<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">


    <LinearLayout
        android:id="@+id/nav_panel"
        android:layout_width="160dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/nav_panel_background"
        android:paddingTop="32dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <ImageView android:layout_width="36dp" android:layout_height="36dp" android:layout_marginBottom="10dp" android:src="@drawable/ic_hearth" android:importantForAccessibility="no" />
        <TextView
            android:id="@+id/nav_app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/app_name"
            android:textColor="@color/text_primary"
            android:textSize="26sp"
            android:fontFamily="sans-serif-medium" />


        <TextView
            android:id="@+id/nav_item_home"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/nav_home"
            android:textSize="18sp"
            android:textColor="@color/nav_item_normal"
            android:background="@drawable/nav_item_selector"
            android:focusable="true"
            android:nextFocusDown="@id/nav_item_settings"
            android:nextFocusRight="@id/content_container" />


        <TextView
            android:id="@+id/nav_item_settings"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/nav_settings"
            android:textSize="18sp"
            android:textColor="@color/nav_item_normal"
            android:background="@drawable/nav_item_selector"
            android:focusable="true"
            android:nextFocusUp="@id/nav_item_home"
            android:nextFocusRight="@id/content_container" />

        <Space android:layout_width="1dp" android:layout_height="0dp" android:layout_weight="1" />
        <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="32dp" android:text="@string/hearth_nav_footer" android:textColor="@color/text_tertiary" android:textSize="12sp" android:lineSpacingExtra="5dp" />
    </LinearLayout>


    <View
        android:id="@+id/nav_divider"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/divider"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/nav_panel" />


    <FrameLayout
        android:id="@+id/content_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/nav_divider"
        app:layout_constraintEnd_toEndOf="parent" />


    <FrameLayout
        android:id="@+id/streaming_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
